--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,5 +1,5 @@
 .mainnav {
-  background-color: #BC3908
+  background-color: #BC3908;
 }
 
 
@@ -7,20 +7,23 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.363);
 }
 
 .navsearch {
   width: auto;
-  align-self: center;
+  align-self: center
 }
 
 .buttons {
-
+justify-content: space-between;
+padding: 0 10px;
 }
 
 .deadreads-title {
   font-size: 2em;
+  padding: 5px;
+  margin: 0 15px;
 }
 
 .navlinks {
@@ -33,17 +36,47 @@
 
 .navlinks li {
   display: inline-block;
+  padding: 0 30px;
 }
 
 .navlinks li a {
-  padding: 0 30px;
+  width: 100%;
+
   text-decoration: none;
 }
+
+.navlinks li a:hover {
+  border-bottom: solid 1px black;
+}
+
 
 .searchinput {
   min-width: 800px;
   max-width: 800px;
+  height: 25px;
+  border: 0;
+  border-radius: 10px;
+  box-shadow:0 0 20px 5px rgba(0,0,0,0.1);
+  background-color: rgb(210, 180, 130);
+  box-sizing: border-box;
   /* flex-grow: 4 */
+}
+
+.searchinput:focus {
+  outline-style: none;
+  background-color: rgb(214, 205, 197)
+}
+
+.searchbtn {
+  border-radius: 10px;
+  border: 0;
+  height: 25px;
+  margin: 0 5px;
+  background-color:
+}
+
+.searchbtn:focus {
+  outline-style: none;
 }
 
 .logout {
