Fix to the Sign-Up button styling

--- a/views/sign-up-form.pug
+++ b/views/sign-up-form.pug
@@ -28,9 +28,10 @@ block content
       label(for="fullName") Full Name:
       input(type="text" name="fullName" required)
     div.form-field
-      label(for="gender") Gender
+      label(for="gender") Gender:
       select(name="gender" id="gender" required)
         option(value="Male") Male
         option(value="Female") Female
         option(value="other") Other
-    button(type="submit" class="form-field") Sign-Up
+    button(type="submit" class="form-field__button") 
+      span Sign-Up
