--- a/views/utils.pug
+++ b/views/utils.pug
@@ -1,6 +1,6 @@
 mixin validationErrorSummary(errors)
   if errors
-    p The following errors occured
+    p(class="errors") The following errors occured:
     ul
       each error in errors
-        li= error
+        li(class="errors")= error
