--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
         title= title
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/navbar.css')
+        link(rel='stylesheet' href='/stylesheets/index.css')
   body
     nav(class="mainnav")
       div(class="navbar")
