--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -2,12 +2,13 @@
   background-color: #BC3908
 }
 
-
 .navbar {
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
   border-bottom: 1px solid grey;
+  position: sticky;
+  top: 0px;
 }
 
 .navsearch {
@@ -20,7 +21,34 @@
 }
 
 .deadreads-title {
-  font-size: 2em;
+  font-family: Gypsy Curse;
+  font-size: 8ch;
+  margin-left: 20px;
+
+}
+
+.deadreads-title:hover {
+  transition: text-shadow 4s;
+  text-shadow: 
+  1px 4px 1px #300000,
+  1px 6px 1px #400000,
+  1px 8px 1px #500000,
+  1px 10px 1px #600000,
+  2px 12px 1px #700000,
+  2px 14px 1px #800000,
+  2px 16px 1px #900000,
+  2px 18px 1px #A00000,
+  3px 20px 1px #B00000,
+  3px 22px 1px #C00000,
+  3px 24px 1px #D00000,
+  3px 26px 1px #E00000,
+  3px 28px 1px #F00000,
+  3px 30px 1px #FA0000,
+  3px 32px 1px #FB0000,
+  4px 34px 1px #FC0000,
+  4px 36px 1px #FD0000,
+  4px 38px 1px #FE0000,
+  4px 40px 2px #FF0000;
 }
 
 .navlinks {
