update nav bar styling

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,18 +8,28 @@ html
   body
     nav(class="mainnav")
       div(class="navbar")
-        h2(class='deadreads-title') deadreads
+        div(class='pagetitle')
+          h2(class='deadreads-title') deadreads
         div(class='navsearch')
           input(type='text' placeholder="Search horror books" class='searchinput')
-        div(class="buttons")
-          form(method='POST' action='/users/logout' class="logout")
-            button(type='submit') Logout
-          form(method='GET' action='/users/login' class='login')
-            button(type='submit') Login
+        div(class="usericons")
+          div(class='tags')
+            a(href='localhost:8080/tags') T
+          div(class='crypts')
+            a(href='localhost:8080/crypts') C
+          div(class='userprofile')
+            a(href='localhost:8080/users/:id') U
+
+
       div
         ul(class="navlinks")
           li: a(href='localhost:8080/') Home
           li: a(href='localhost:8080/crypts') My Crypts
           li: a(href='localhost:8080/profile/:id') My Profile
+        //- div(class="buttons")
+        //-     form(method='POST' action='/users/logout' class="logout")
+        //-       button(type='submit') Logout
+        //-     form(method='GET' action='/users/login' class='login')
+        //-       button(type='submit') Login
 
   block content
