--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -5,7 +5,7 @@
 
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 0 auto;
   border-bottom: 1px solid rgba(0, 0, 0, 0.363);
 }
@@ -23,7 +23,10 @@ padding: 0 10px;
 .deadreads-title {
   font-size: 2em;
   padding: 5px;
-  margin: 0 15px;
+}
+
+.pagetitle {
+  width: 250px;
 }
 
 .navlinks {
@@ -41,7 +44,6 @@ padding: 0 10px;
 
 .navlinks li a {
   width: 100%;
-
   text-decoration: none;
 }
 
@@ -51,15 +53,16 @@ padding: 0 10px;
 
 
 .searchinput {
+  padding: 10px;
+  font-size:0.9em;
   min-width: 800px;
   max-width: 800px;
-  height: 25px;
+  height: 35px;
   border: 0;
   border-radius: 10px;
   box-shadow:0 0 20px 5px rgba(0,0,0,0.1);
   background-color: rgb(210, 180, 130);
   box-sizing: border-box;
-  /* flex-grow: 4 */
 }
 
 .searchinput:focus {
@@ -67,26 +70,36 @@ padding: 0 10px;
   background-color: rgb(214, 205, 197)
 }
 
-.searchbtn {
-  border-radius: 10px;
-  border: 0;
-  height: 25px;
-  margin: 0 5px;
-  background-color:
+.usericons {
+  display: flex;
+  padding: 0 10px;
+  justify-content: center;
+  align-items: center;
 }
 
-.searchbtn:focus {
-  outline-style: none;
+.usericons div a {
+  width: 35px;
+  height: 35px;
+  text-decoration: none;
+  color: rgb(210, 180, 130);
 }
 
-.logout {
+.tags, .crypts, .userprofile {
+  padding-top: 8px;
+  width: 35px;
+  height: 35px;
+  background-color: #220901;
+  margin: 0 10px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  text-align: center;
+}
+
+/* .logout {
 display: inline-block;
 }
 
 .login {
 display: inline-block;
-}
-
-.hidden {
-
-}
+} */
