--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,5 +1,7 @@
 .mainnav {
-  background-color: #BC3908
+  background-color: #BC3908;
+  position: sticky;
+  top: 0px;
 }
 
 .navbar {
@@ -7,8 +9,6 @@
   justify-content: space-between;
   margin: 0 auto;
   border-bottom: 1px solid grey;
-  position: sticky;
-  top: 0px;
 }
 
 .navsearch {
@@ -56,7 +56,6 @@
   padding: 10px;
   margin: 0 auto;
   justify-content: center;
-
 }
 
 .navlinks li {
