crypts routes mostly working we think

--- a/views/user-crypts.pug
+++ b/views/user-crypts.pug
@@ -11,4 +11,4 @@ block content
         tbody
             td
                 each crypt in crypts
-                    tr:a(href="users/:id/crypts/1")= crypt.name
+                    tr:a(href="users/:id/crypts/:id")= crypt.name
