fix demo button and if statement for layout.pug

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,12 +25,13 @@ html
       div
         ul(class="navlinks")
           li: a(href='/') Home
-          li: a(href=`/users/${user.id}/crypts`) My Crypts
-          li: a(href=`/users/${user.id}`) My Profile
-        div(class="buttons")
-            form(method='POST' action='/users/logout' class="logout")
-              button(type='submit') Logout
-            form(method='GET' action='/users/login' class='login')
-              button(type='submit') Login
+          if user
+            li: a(href=`/users/${user.id}/crypts`) My Crypts
+            li: a(href=`/users/${user.id}`) My Profile
+        //- div(class="buttons")
+        //-     form(method='POST' action='/users/logout' class="logout")
+        //-       button(type='submit') Logout
+        //-     form(method='GET' action='/users/login' class='login')
+        //-       button(type='submit') Login
 
   block content
