--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -12,7 +12,6 @@ h1 {
 
 body {
     background-color: #F6AA1C;
-    /* font-family: 'Lato', sans-serif, 'Merriweather', serif; */
 }
 
 a {
@@ -21,13 +20,26 @@ a {
 
 .book {
     display: inline-flex;
+    margin-left: 10%;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+}
+
+.books {
+    display: inline-flex;
     margin-left: 20px;
     height: 200px;
     justify-content: center;
     align-items: center;
 }
 
-.list {
-    padding: 20px;
+ul.list {
+    padding: 50px;
+    font-family: 'Lato', 'Merriweather', serif;
+}
+
+li.title {
+    font-size: xx-large;
 }
 
