--- a/views/books.pug
+++ b/views/books.pug
@@ -3,10 +3,11 @@ extends layout.pug
 block content
   ul
     each book in books
-      div.book
-        img(src=`${book.coverArt}` width="80px" height="100px")
-        ul.list
-          li= book.title
-          li by #{book.author}
-          li= book.synopsis
-          li published #{book.publicationDate}
+      div.books
+        a(href=`/books/${book.id}`) 
+          img(src=`${book.coverArt}` width="80px" height="100px")
+        //- ul.list
+        //-   li= book.title
+        //-   li by #{book.author}
+        //-   li= book.synopsis
+        //-   li published #{book.publicationDate}
