--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,7 @@ html
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/navbar.css')
         link(rel='stylesheet' href='/stylesheets/index.css')
+        link(rel='stylesheet' href='/stylesheets/footer.css')
   body
     nav(class="mainnav")
       div(class="navbar")
