--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,10 +28,10 @@ html
           if user
             li: a(href=`/users/${user.id}/crypts`) My Crypts
             li: a(href=`/users/${user.id}`) My Profile
-        //- div(class="buttons")
-        //-     form(method='POST' action='/users/logout' class="logout")
-        //-       button(type='submit') Logout
-        //-     form(method='GET' action='/users/login' class='login')
-        //-       button(type='submit') Login
+        div(class="buttons")
+            form(method='POST' action='/users/logout' class="logout")
+              button(type='submit') Logout
+            form(method='GET' action='/users/login' class='login')
+              button(type='submit') Login
 
   block content
