link to user:id page on navbar

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,7 +20,7 @@ html
           div(class='crypts')
             a(href='/crypts') C
           div(class='userprofile')
-            a(href='/users/:id') U
+            a(href=`/users/${user.id}`) U
 
 
       div
