moved index styling to index.css

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -29,7 +29,6 @@ a {
 
 .list {
     padding: 20px;
-
 }
 
 .main-container {
@@ -41,35 +40,35 @@ a {
     flex-wrap: wrap;
     align-content: space-around;
     align-items: center;
-}
+  }
 
-.welcome {
+  .welcome {
    text-align: center;
    margin-top: 15px;
    font-size: 42px;
    border-bottom: 3px solid #220901;
    max-width: 600px;
    margin-bottom: 30px;
-}
+  }
 
-.books-title, .reviews-title {
+  .books-title, .reviews-title {
     font-size: 32px;
     border-bottom: 1px solid black;
     text-align: center;
-}
+  }
 
-.book-image {
+  .book-image {
     max-width: 250px;
     max-height: 240px;
     object-fit: fill;
-}
+  }
 
-.bookimglink {
+  .bookimglink {
     height: 0;
     width: 0;
-}
+  }
 
-.books-container {
+  .books-container {
     max-width: 900px;
     width: 900px;
     flex-direction: row;
@@ -78,33 +77,34 @@ a {
     padding: 15px;
     border-radius: 25px;
     box-shadow: 0 0 20px 5px rgba(0,0,0,0.1)
-}
+  }
 
-.nested-books-container {
+  .nested-books-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
+  }
 
-.booklink-container {
+  .booklink-container {
     margin-top: 20px;
     text-align: center;
     font-size: 18px;
-}
+  }
 
-.books {
+  .books {
     box-shadow: 0 0 20px 5px rgba(0,0,0,0.4);
-}
+  }
 
-.reviews-container {
+  .reviews-container {
     margin-top: 50px;
     max-width: 500px;
     background-color: rgb(210, 180, 130);
     box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.1);
     padding: 15px;
     border-radius: 25px;
-}
+    margin-bottom: 30px;
+  }
 
-.reviewlink-container {
+  .reviewlink-container {
     text-align: center;
-}
+  }
