--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,8 +2,6 @@ doctype html
 html
   head
       block head
-        if crypts
-          title= crypts[0].name
         title= title
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/navbar.css')
@@ -32,10 +30,14 @@ html
           if user
             li: a(href=`/users/${user.id}/crypts`) My Crypts
             li: a(href=`/users/${user.id}`) My Profile
-        div(class="buttons")
-            form(method='POST' action='/users/logout' class="logout")
-              button(type='submit') Logout
-            form(method='GET' action='/users/login' class='login')
-              button(type='submit') Login
+            li: a(href="/users/logout") Logout
+          else
+            li: a(href="/users/sign-up") Sign Up
+            li: a(href="/users/login") Login
+        //- div(class="buttons")
+        //-     form(method='POST' action='/users/logout' class="logout")
+        //-       button(type='submit') Logout
+        //-     form(method='GET' action='/users/login' class='login')
+        //-       button(type='submit') Login
 
   block content
