--- a/views/log-in-form.pug
+++ b/views/log-in-form.pug
@@ -22,3 +22,4 @@ block content
         div.form-field
             button(type="submit" class="demobtn form-field__button")
                 span Demo Login
+    include footer
