--- a/views/sign-up-form.pug
+++ b/views/sign-up-form.pug
@@ -33,5 +33,6 @@ block content
         option(value="Male") Male
         option(value="Female") Female
         option(value="other") Other
-    button(type="submit" class="form-field__button") 
+    button(type="submit" class="form-field__button")
       span Sign-Up
+  include footer.pug
