--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout.pug
 
 append head
   //- add page specific styles by appending to the head
-  link(rel="stylesheet" href="/stylesheets/indexstyling.css")
+  link(rel="stylesheet" href="/stylesheets/index.css")
   //- add page specific js
   script(src="/javascripts/index.js" type="module" defer)
 
@@ -26,7 +26,7 @@ block content
     .reviews-container
       p.reviews-title Recent Reviews
       div.nested-reviews-container
-        if reviews
+        if reviews && user
           each review in reviews
             div.reviews
               div.review-container
@@ -38,5 +38,4 @@ block content
                     div.review= review.review
       div.reviewlink-container
         a(href="/reviews" class="reviewlink") Browse Reviews
-
-  include footer.pug
+  include footer
