--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html
         title= title
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/navbar.css')
-        link(rel='stylesheet' href='/stylesheets/index.css')
+        link(rel='stylesheet' href='/stylesheets/universal.css')
         link(rel='stylesheet' href='/stylesheets/footer.css')
   body
     nav(class="mainnav")
@@ -22,6 +22,8 @@ html
           div(class='userprofile')
             if user
               a(href=`/users/${user.id}`) U
+            else
+              a(href='/') U
 
 
       div
@@ -40,4 +42,4 @@ html
         //-     form(method='GET' action='/users/login' class='login')
         //-       button(type='submit') Login
 
-  block content
+    block content
