--- a/views/user-crypts.pug
+++ b/views/user-crypts.pug
@@ -13,3 +13,4 @@ block content
                 td: a(href=`/users/${user.id}/crypts/${crypts[0].id}`)= crypts[0].name
                 td: a(href=`/users/${user.id}/crypts/${crypts[1].id}`)= crypts[1].name
                 td: a(href=`/users/${user.id}/crypts/${crypts[2].id}`)= crypts[2].name
+    include footer.pug
