--- a/views/book.pug
+++ b/views/book.pug
@@ -12,4 +12,12 @@ block content
       li by #{book.author}
       li= book.synopsis
       li published #{book.publicationDate}
+  div
+    form(action=`/books/${book.id}` method="post")
+      select.cryptSelector(name="cryptSelector")
+        option Add to Crypt...
+        option(value="Have Read" id="have-read") Have Read
+        option(value="Want to Read" id="want-to-read") Want to Read
+        option(value="Currently Reading" id="currently-reading") Currently Reading
+      button(type="submit" id="crypt-submit") Submit
   include footer.pug
