--- a/views/crypt.pug
+++ b/views/crypt.pug
@@ -2,8 +2,12 @@ extends layout.pug
 
 block content
 
-    ul
-        if books
-            li= book.author
-            li= book.title
+    div.books-container
+      p.books-title Books
+      div.nested-books-container
+        if displayBooks
+          each book in displayBooks
+            div.book
+              a(href=`/books/${book.id}` class="bookimglink"): img(src=`/books/${book.coverArt}` class="book-image")
+
     include footer.pug
