add search feature

--- a/public/stylesheets/books.css
+++ b/public/stylesheets/books.css
@@ -12,6 +12,22 @@ table {
   height: 200px;
   justify-content: center;
   align-items: center;
+  background-color: rgb(210, 180, 130);
+  padding: 15px;
+  border-radius: 25px;
+  margin-top: 50px;
+  box-shadow: 0 0 20px 5px rgba(0,0,0,0.1);
+  margin-bottom: 400px;
+}
+
+.form {
+  margin: 20px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .books {
@@ -34,5 +50,19 @@ ul.list {
 
 li.title {
   font-size: xx-large;
+}
 
+.errors {
+  font-size: 10px;
+  color: red;
+  text-align: center;
+  margin-top: 5px;
+  padding: 5px;
+}
+
+.success {
+  font-size: 10px;
+  color: green;
+  margin-top: 5px;
+  padding: 5px;
 }
