--- a/views/book.pug
+++ b/views/book.pug
@@ -7,19 +7,22 @@ append head
 
 block content
   div.book
-    img(src=`${book.coverArt}` width="80px" height="100px")
+    div.container
+      img(src=`${book.coverArt}` width="80px" height="100px")
+      div.form
+        form(action=`/books/${book.id}` method="post")
+          select.cryptSelector(name="cryptSelector")
+            option Add to Crypt...
+            each crypt in crypts
+              option(value=crypt.id class="crypt")= crypt.name
+      div.button
+        button(type="submit" id="crypt-submit") Submit
+      div.errors
+      div.success
     ul.list(id=`${book.id}`)
       li.title= book.title
       li by #{book.author}
       li= book.synopsis
       li published #{book.publicationDate}
-  div
-    div.errors
-    form(action=`/books/${book.id}` method="post")
-      select.cryptSelector(name="cryptSelector")
-        option Add to Crypt...
-        each crypt in crypts
-          option(value=crypt.id class="crypt")= crypt.name
-      button(type="submit" id="crypt-submit") Submit
 
   include footer.pug
