--- a/views/index.pug
+++ b/views/index.pug
@@ -37,5 +37,6 @@ block content
                     div.username= user.fullName
                     div.review= review.review
       div.reviewlink-container
-        a(href="/reviews" class="reviewlink") Browse Reviews
+        if user
+          a(href=`/users/${user.id}/reviews` class="reviewlink") Browse Reviews
   include footer
