--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,15 +15,16 @@ html
         div(class='navsearch')
           input(type='text' placeholder="Search horror books" class='searchinput')
         div(class="usericons")
-          div(class='tags')
-            a(href='/tags') T
+          //- div(class='tags')
+          //-   a(href='/tags') T
           div(class='crypts')
-            a(href='/crypts') C
+            if user
+              a(href=`/users/${user.id}/crypts`) Crypts
           div(class='userprofile')
             if user
-              a(href=`/users/${user.id}`) U
+              a(href=`/users/${user.id}`) User
             else
-              a(href='/') U
+              a(href='/') User
 
 
       div
@@ -34,7 +35,7 @@ html
             li: a(href=`/users/${user.id}`) My Profile
             li: a(href="/users/logout") Logout
           else
-            li: a(href="/users/sign-up") Sign Up
+            li.center-circle: a(href="/users/sign-up") Sign Up
             li: a(href="/users/login") Login
         //- div(class="buttons")
         //-     form(method='POST' action='/users/logout' class="logout")
