--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Gypsy Curse";
+    src: url('Gypsy-Curse.ttf')
+  }
+
 .form {
     display: flex;
     width: 400px;
@@ -22,69 +27,45 @@
     padding: 8px;
 }  
 
-/* .form-field__button {
-    border-radius: 2%;
-    width: 142px;
-    height: 22px;
-    margin-bottom: 8px;
-    padding-bottom: 2px;
-    text-align: center;
-} */
-
-
 .errors {
     color: #941b0c;
     text-align: center;
 }
 
-button {
-    border-radius: 5px;
-    width: 116px;
-    height: 48px;
-    background: #220901;
-}
-
 .form-field__button {
-    margin-left: 4px;
-    margin-top: 1px;
-    border-radius: 5px;
+    font-family: Lato;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
     width: 100px;
-    height: 35px;
+    height: 45px;
     color: white;
     background: #220901;
     transition: text-shadow 3s;
 }
         
 .form-field__button:hover {
-    font-weight: 900;
+    font-family: Gypsy Curse;
+    font-size: xx-large;
+    border: 1px solid black;
+    border-radius: 50px;
     color: silver;
-    font-size: x-large;
     margin-left: 4px;
     margin-top: 1px;
     color: silver;
     animation-name: color-background;
     animation-duration: 8s;
-        
+    transition: text-shadow 3s;   
     text-shadow: 
-        1px 4px 1px #300000,
-        1px 6px 1px #400000,
-        1px 8px 1px #500000,
-        1px 10px 1px #600000,
-        2px 12px 1px #700000,
-        2px 14px 1px #800000,
-        2px 16px 1px #900000,
-        2px 18px 1px #A00000,
-        3px 20px 1px #B00000,
-        3px 22px 1px #C00000,
-        3px 24px 1px #D00000,
-        3px 26px 1px #E00000,
-        3px 28px 1px #F00000,
-        3px 30px 1px #FA0000,
-        3px 32px 1px #FB0000,
-        4px 34px 1px #FC0000,
-        4px 36px 1px #FD0000,
-        4px 38px 1px #FE0000,
-        4px 40px 2px #FF0000;
+      13px 30px 1px black,
+      14px 34px 1px #FC0000,
+      15px 36px 1px #FD0000,
+      16px 38px 1px #FE0000,
+      16px 40px 2px #FF0000, 
+      16px 42px 2px #FF0000, 
+      16px 44px 2px #FF0000, 
+      17px 46px 3px #FF0000; 
 }
 
 @keyframes color-background {
@@ -92,4 +73,4 @@ button {
     10%  {background-color: rgb(153, 106, 114);}
     20%  {background-color: red;}
     100% {background-color: red;}
-    }
+}
