--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -1,6 +1,6 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Lato", Helvetica, Arial, sans-serif;
 }
 
 a {
@@ -13,7 +13,7 @@ a {
 
 h1, h2, h3, h4, h5, h6, a, ol, li, ul, div, span,
 body, header, nav {
-  font-size: 1rem;
+  /* font-size: 1rem; */
   color: inherit;
   background-color: transparent;
   margin: 0;
