--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Gypsy Curse";
+    src: url('Gypsy-Curse.ttf')
+  }
+
 .form {
     display: flex;
     width: 400px;
@@ -31,10 +36,10 @@
     text-align: center;
 }
 
-.form-field__button:hover {
+/* .form-field__button:hover {
     background-color: #bc3908;
     color: white;
-}
+} */
 
 .errors {
     color: #941b0c;
@@ -49,9 +54,12 @@ button {
 }
 
 .form-field__button {
-    margin-left: 4px;
-    margin-top: 1px;
-    border-radius: 5px;
+    font-family: Lato;
+    font-size: large;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
     width: 100px;
     height: 35px;
     color: white;
@@ -60,35 +68,26 @@ button {
 }
         
 .form-field__button:hover {
-    font-weight: 900;
+    font-family: Gypsy Curse;
+    font-size: xx-large;
+    border: 1px solid black;
+    border-radius: 20px;
     color: silver;
-    font-size: x-large;
     margin-left: 4px;
-    margin-top: 1px;
+    margin-top: 0px;
     color: silver;
     animation-name: color-background;
     animation-duration: 8s;
-        
+    transition: text-shadow 3s;   
     text-shadow: 
-        1px 4px 1px #300000,
-        1px 6px 1px #400000,
-        1px 8px 1px #500000,
-        1px 10px 1px #600000,
-        2px 12px 1px #700000,
-        2px 14px 1px #800000,
-        2px 16px 1px #900000,
-        2px 18px 1px #A00000,
-        3px 20px 1px #B00000,
-        3px 22px 1px #C00000,
-        3px 24px 1px #D00000,
-        3px 26px 1px #E00000,
-        3px 28px 1px #F00000,
-        3px 30px 1px #FA0000,
-        3px 32px 1px #FB0000,
-        4px 34px 1px #FC0000,
-        4px 36px 1px #FD0000,
-        4px 38px 1px #FE0000,
-        4px 40px 2px #FF0000;
+      13px 30px 1px black,
+      14px 34px 1px #FC0000,
+      15px 36px 1px #FD0000,
+      16px 38px 1px #FE0000,
+      16px 40px 2px #FF0000, 
+      16px 42px 2px #FF0000, 
+      16px 44px 2px #FF0000, 
+      17px 46px 3px #FF0000; 
 }
 
 @keyframes color-background {
@@ -96,4 +95,4 @@ button {
     10%  {background-color: rgb(153, 106, 114);}
     20%  {background-color: red;}
     100% {background-color: red;}
-    }
+}
