--- a/views/sign-up-form.pug
+++ b/views/sign-up-form.pug
@@ -34,5 +34,5 @@ block content
         option(value="Female") Female
         option(value="other") Other
     button(type="submit" class="form-field__button")
-      span Sign-Up
+      span Sign Up
   include footer.pug
