--- a/public/stylesheets/universal.css
+++ b/public/stylesheets/universal.css
@@ -15,6 +15,6 @@ body {
     font-family: 'Lato', sans-serif, 'Merriweather', serif;
 }
 
-a {
-    /* font-family: 'Merriweather', serif; */
-}
+ /* a {
+    font-family: 'Merriweather', serif;
+}  */
