--- a/public/stylesheets/books.css
+++ b/public/stylesheets/books.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Grenze Gotisch";
+  src: url("https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@100;200;300;400;500;600;700;800;900&display=swap")
+}
+
 .books-title, .reviews-title {
   font-size: 32px;
   border-bottom: 1px solid black;
@@ -22,8 +27,8 @@
 
 .book {
   display: inline-flex;
-  margin-left: 10%;
-  height: 200px;
+  margin-left: 1%;
+  height: 350px;
   justify-content: center;
   align-items: center;
 }
@@ -35,3 +40,29 @@
   align-items: center;
 }
 
+ul.list {
+  margin-left: 50px;
+}
+
+li.title {
+  font-family: "Grenze Gotisch";
+  font-size: xxx-large;
+}
+
+li.author {
+  /* font-family: "Grenze Gotisch"; */
+  font-size: large;
+}
+
+li.synopsis {
+  font-family: "Grenze Gotisch";
+  font-size: large;
+  width: 450px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+}
+
+li.published {
+  font-weight: 700;
+}
